user bank with swagger
